<resources>
    <string name="app_name">Flights</string>
    <string name="passport_number">Passport number</string>
    <string name="passenger_name">Passenger name</string>
    <string name="arrival_time">Arrival time</string>
    <string name="departure_time">Departure time</string>
    <string name="arrival_city">Arrival city</string>
    <string name="departure_city">Departure city</string>
    <string name="save">Save</string>
    <string name="child">Child</string>
    <string name="adult">Adult</string>
    <string name="arrival_date">Arrival date</string>
    <string name="departure_date">Departure date</string>
    <string name="passenger">Passenger:</string>
    <string name="passport">Passport:</string>
    <string name="category">Category:</string>
    <string name="adult_child">Adult / Child</string>
    <string name="dialog_message">Are you sure? This action cannot be undone.</string>
    <string name="wrong">Wrong</string>
    <string name="select_date">Select date</string>
    <string name="arrow"><![CDATA[->]]></string>
    <string name="tag">TAG</string>
    <string name="warning">Warning!</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="null_activity">Activity cannot be null</string>
</resources>