<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/bindDepartureCity"
            style="@style/EditTextStyle"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/departure_city"
            android:inputType="text"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/bindArrivalCity"
            style="@style/EditTextStyle"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/arrival_city"
            android:inputType="text"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/bindDepartureDate"
                android:layout_width="148dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_background"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/departure_date"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/bindDepartureTime"
                android:layout_width="148dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_background"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/departure_time"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/bindArrivalDate"
                android:layout_width="148dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_background"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/arrival_date"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/bindArrivalTime"
                android:layout_width="148dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_background"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/arrival_time"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <EditText
            android:id="@+id/bindPassportNumber"
            style="@style/EditTextStyle"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/passport_number"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/bindPassengerName"
            style="@style/EditTextStyle"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/passenger_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />


        <Switch
            android:id="@+id/viewSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/adult_child"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createFlight"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>